<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:id="@+id/pwd">

        <TextView
            android:id="@+id/puser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pusername"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/ppass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ppassword" />
        <TextView
            android:id="@+id/purl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/purl" />

    </LinearLayout>

</LinearLayout>