<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">



       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardBackgroundColor="@color/theme">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/home"
               android:textColor="@color/white"
               android:padding="15dp"
               android:textSize="30sp"
               />
       </androidx.cardview.widget.CardView>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="20dp"
           android:id="@+id/folder">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/login_pwd"
               android:textSize="20sp"/>

           <TextView
               android:id="@+id/counter"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="140dp"
               android:text="@string/counter" />

       </LinearLayout>


</LinearLayout>