<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dark"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Alohamora"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:textSize="45sp"/>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="40dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signusername"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signpassword"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:textColor="@color/white"
            />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/Bexit"
                android:layout_marginHorizontal="30dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textColorHighlight="@color/black"

                android:backgroundTint="@color/Button"
                android:textSize="15sp"
                />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>